--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "miapp",
+  "name": "firebase",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
@@ -37,5 +38,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "**Organics**",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/valecardozogarcia/miAppCoderHouse.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/valecardozogarcia/miAppCoderHouse/issues"
+  },
+  "homepage": "https://github.com/valecardozogarcia/miAppCoderHouse#readme"
 }
